--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Authorship -- Handbooks, manuals, etc.'
 - !lcc 'PN'
+- GITenberg
 title: 'The Lure of the Pen: A Book for Would-Be Authors'
 url: http://www.gutenberg.org/ebooks/36837
